kubernetes/apps/security/authentik/app/ingress-protect-echo.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost
  annotations:
    hajimari.io/enable: false
spec:
  rules:
    - host: echo-server.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: /outpost.goauthentik.io
            backend:
              service:
                name: authentik
                port:
                  number: 80
